0.10/_sources/checks_gallery/tabular/data_integrity/plot_columns_info.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/data_integrity/plot_columns_info.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_data_integrity_plot_columns_info.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_data_integrity_plot_columns_info.py:


.. _plot_tabular_columns_info:

Columns Info
************

This notebook provides an overview for using and understanding the columns info check.

**Structure:**

* `What are columns info <#what-are-columns-info>`__
* `Generating data <#generating-data>`__
* `Run the check <#running-columns-info-check>`__

.. GENERATED FROM PYTHON SOURCE LINES 19-22

What are columns info
=======================
The ``ColumnsInfo`` check returns the role and logical type of each column (e.g. date, categorical, numerical etc.).

.. GENERATED FROM PYTHON SOURCE LINES 25-27

Imports
=======

.. GENERATED FROM PYTHON SOURCE LINES 27-33

.. code-block:: default

    import numpy as np
    import pandas as pd

    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import ColumnsInfo








.. GENERATED FROM PYTHON SOURCE LINES 34-36

Generating data
===============

.. GENERATED FROM PYTHON SOURCE LINES 36-47

.. code-block:: default


    num_fe = np.random.rand(500)
    cat_fe = np.random.randint(3, size=500)
    num_col = np.random.rand(500)
    date = range(1635693229, 1635693729)
    index = range(500)
    data = {'index': index, 'date': date, 'a': cat_fe, 'b': num_fe, 'c': num_col, 'label': cat_fe}
    df = pd.DataFrame.from_dict(data)

    dataset = Dataset(df, label='label', datetime_name='date', index_name='index', features=['a', 'b'], cat_features=['a'])








.. GENERATED FROM PYTHON SOURCE LINES 48-50

Running columns info check
==========================

.. GENERATED FROM PYTHON SOURCE LINES 50-53

.. code-block:: default


    check = ColumnsInfo()








.. GENERATED FROM PYTHON SOURCE LINES 54-56

.. code-block:: default


    check.run(dataset=dataset)





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Columns Info</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"240660ac66f548d99480176cc85a62cf": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_0f9c15e68bd6431dba89cc31b06b7e3d", "IPY_MODEL_6403043daa1244468b4a447b076c9d2e", "IPY_MODEL_0cdc3e7a267c455aaa28b6c05fd7d209", "IPY_MODEL_6106602f4b2c40c4b904e7a5a10a2283"], "layout": "IPY_MODEL_575e0d33fb154ad5a67c9a93d9a7c3a0"}}, "0f9c15e68bd6431dba89cc31b06b7e3d": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_0a4c428b038a40b1abb6bd47a3c89aef", "style": "IPY_MODEL_8339fd2e00c0489882737ae034a56858", "value": "<h4><b>Columns Info</b></h4>"}}, "0a4c428b038a40b1abb6bd47a3c89aef": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "8339fd2e00c0489882737ae034a56858": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "6403043daa1244468b4a447b076c9d2e": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_dad91fe2a87b4bf2a1296fdaf1eacf76", "style": "IPY_MODEL_15f67eeb64a747ff819b7115219ad53d", "value": "<p>Return the role and logical type of each column. <a href=\"https://docs.deepchecks.com/0.10/checks_gallery/tabular/data_integrity/plot_columns_info.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "dad91fe2a87b4bf2a1296fdaf1eacf76": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "15f67eeb64a747ff819b7115219ad53d": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "0cdc3e7a267c455aaa28b6c05fd7d209": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_27d65ecbb2e74a60a4bddb3edbacc08f", "style": "IPY_MODEL_dad1f02dd00d40418c1ece14138c64a4"}}, "27d65ecbb2e74a60a4bddb3edbacc08f": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "dad1f02dd00d40418c1ece14138c64a4": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "6106602f4b2c40c4b904e7a5a10a2283": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_540dd784f2ee4cb3b344d461fbf5a8b8", "IPY_MODEL_0bfb316ea2d04df39fd54ddf8fe5a5a5", "IPY_MODEL_f45a3d7963e7442aa8ff01060c13e93e"], "layout": "IPY_MODEL_eb3bd25e49064015a31c59fe2a81c3a2"}}, "540dd784f2ee4cb3b344d461fbf5a8b8": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_56c2cf7b542443fb8840f66fa6cf25a2", "style": "IPY_MODEL_65a6825a4bc9403d801bf388a66f69c7", "value": "<h5><b>Additional Outputs</b></h5>"}}, "56c2cf7b542443fb8840f66fa6cf25a2": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "65a6825a4bc9403d801bf388a66f69c7": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "0bfb316ea2d04df39fd54ddf8fe5a5a5": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_a7d71d4949c34c4f8a3788e23f27d976", "style": "IPY_MODEL_dd14b319c82e4551939b4d236a4d2324", "value": "<div>Showing only the top 10 columns, you can change it using n_top_columns param</div>"}}, "a7d71d4949c34c4f8a3788e23f27d976": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "dd14b319c82e4551939b4d236a4d2324": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "f45a3d7963e7442aa8ff01060c13e93e": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_fee27b5bc7bd4a8885488562e79337ff", "style": "IPY_MODEL_28a06e4ee0d14003bf929fa8266dd5bf", "value": "<style type=\"text/css\">\n#T_af7d3_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_af7d3_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_af7d3_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_af7d3_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_af7d3_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_af7d3_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >index</th>\n      <th class=\"col_heading level0 col1\" >date</th>\n      <th class=\"col_heading level0 col2\" >label</th>\n      <th class=\"col_heading level0 col3\" >a</th>\n      <th class=\"col_heading level0 col4\" >b</th>\n      <th class=\"col_heading level0 col5\" >c</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_af7d3_level0_row0\" class=\"row_heading level0 row0\" >role</th>\n      <td id=\"T_af7d3_row0_col0\" class=\"data row0 col0\" >index</td>\n      <td id=\"T_af7d3_row0_col1\" class=\"data row0 col1\" >date</td>\n      <td id=\"T_af7d3_row0_col2\" class=\"data row0 col2\" >label</td>\n      <td id=\"T_af7d3_row0_col3\" class=\"data row0 col3\" >categorical feature</td>\n      <td id=\"T_af7d3_row0_col4\" class=\"data row0 col4\" >numerical feature</td>\n      <td id=\"T_af7d3_row0_col5\" class=\"data row0 col5\" >other</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "fee27b5bc7bd4a8885488562e79337ff": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "28a06e4ee0d14003bf929fa8266dd5bf": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "eb3bd25e49064015a31c59fe2a81c3a2": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "575e0d33fb154ad5a67c9a93d9a7c3a0": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "240660ac66f548d99480176cc85a62cf"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.026 seconds)


.. _sphx_glr_download_checks_gallery_tabular_data_integrity_plot_columns_info.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_columns_info.py <plot_columns_info.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_columns_info.ipynb <plot_columns_info.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
